--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,5 @@
-# Streamlit
-streamlit==1.28.0
-
-# Core data packages (use newer versions compatible with Python ≥3.12)
-numpy>=1.26.0
-pandas>=2.4.0
-
-# NLP / Text processing
-spacy>=3.6.1
-nltk>=3.8.1
-
-# Topic modeling
-gensim>=4.3.2
-pyLDAvis>=3.3.1
-
-# Visualization
-matplotlib>=3.7.2
-seaborn>=0.12.2
-plotly>=5.16.1
-
-# Misc / Utilities
-scikit-learn>=1.3.0
-textblob>=0.17.1
-tqdm>=4.66.0
-python-3.11.8
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.21.0
+matplotlib==3.8.4
