--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.36.0
-pandas==2.2.2
-numpy==1.26.4
-plotly==5.21.0
-matplotlib==3.8.4
+streamlit==1.31.0
+pandas==2.2.0
+numpy==1.26.0
+matplotlib==3.8.0
+seaborn==0.13.0
+plotly==5.18.0
